<resources>
    <string name="app_name">PJE3JX</string>

    <string name="hello_world">En construction…</string>

    <string name="title_activity_add_book">Ajouter un livre</string>
    <string name="title_activity_edit_book">Éditer un livre</string>
    <string name="title_activity_book_display">Fiche du livre</string>
    <string name="title_activity_list_books">Liste des livres</string>
    <string name="title_activity_filterslist">Filtres dynamiques</string>
    <string name="title_activity_filterslist_add">Créer une liste de filtres</string>
    <string name="title_activity_book_scan">Scanner code-barres</string>

    <string name="action_add">Ajouter</string>
    <string-array name="add_array">
        <item>Remplir le formulaire</item>
        <item>Scanner/Chercher l\'ISBN</item>
    </string-array>
    <string name="action_edit">Éditer</string>
    <string name="action_editdelete">Éditer/Supprimer</string>
    <string name="action_list">Liste des livres</string>
    <string name="action_filter">Filtres</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_search">Chercher</string>
    <string name="action_scan">Scanner</string>
    <string name="action_takeapicture">Prendre une photo</string>
    <string name="action_database">Base de Données</string>
    <string-array name="action_database_array">
        <item>Sauvegarder (Exporter)</item>
        <item>Importer une base de données</item>
    </string-array>
    <string name="action_settings">Paramètres</string>

    <string name="book_isbn">ISBN</string>
    <string name="book_title">Titre</string>
    <string name="book_author">Auteur</string>
    <string name="book_collection">Collection</string>
    <string name="book_publisher">Éditeur</string>
    <string name="book_image">Image</string>
    <string name="book_genre">Genre</string>
    <string name="book_date">Année de sortie</string>
    <string name="book_language">Langue</string>
    <string name="book_description">Description</string>
    <string name="book_comment">Commentaire</string>
    <string name="book_read">Lu?</string>
    <string name="book_rating">Note</string>
    <string name="book_rating_0">(Non noté)</string>
    <string name="book_rating_1">(Horrible)</string>
    <string name="book_rating_2">(Mauvais)</string>
    <string name="book_rating_3">(Moyen)</string>
    <string name="book_rating_4">(Bon)</string>
    <string name="book_rating_5">(Excellent)</string>

    <string name="filterslist_name">Nom</string>
    <string name="filterslist_filters">Critères</string>
    <string name="filterslist_yearstart">Publié après l\'année </string>
    <string name="filterslist_yearend">Publié avant l\'année </string>

    <string name="text_cancel">Annuler</string>
    <string name="text_no">Non</string>
    <string name="text_bookdeleted">Livre supprimé !</string>
    <string name="text_bookadded">Livre ajouté !</string>
    <string name="text_bookedited">Livre édité !</string>
    <string name="text_listadded">Liste créée !</string>
    <string name="text_listdeleted">Liste supprimée !</string>
    <string name="text_editdeletemessage">Voulez-vous éditer/supprimer cet élément ?</string>
    <string name="text_deletemessage">Voulez-vous supprimer cet élément ?</string>
    <string name="text_databasesaved">Sauvegardée dans le fichier %1$s !</string>
    <string name="text_databaseimported">Sauvegarde importée !</string>
    <string name="text_savesfound">Sauvegardes trouvées</string>

    <string name="error_allfieldsnotfilled">Veuillez remplir les champs obligatoires ! (en gras)</string>
    <string name="error_minimumfieldsnotfilled">Veuillez remplir le nom et au moins un filtre !</string>
    <string name="error_noscandatareceived">Pas de résultat !</string>
    <string name="error_datanotfound">Pas de résultat trouvé !</string>
    <string name="error_savesnotfound">Aucune sauvegarde de type " pje3jx….db " !</string>


</resources>
