<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:id="@+id/button"
        android:drawableLeft="@mipmap/icon_plus"
        android:drawableStart="@mipmap/icon_plus"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/action_list"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/icon_list"
        android:drawableStart="@mipmap/icon_list" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/action_filter"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/icon_search"
        android:drawableStart="@mipmap/icon_search" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/action_database"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/icon_db"
        android:drawableStart="@mipmap/icon_db" />

</RelativeLayout>
