<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univ_lille1.pje.pje3jx.BookDisplayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textViewTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="80dp"
            tools:background="#AAA"
            android:id="@+id/imageViewCover"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textViewTitle"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_isbn"
            android:id="@+id/textView0"
            android:layout_below="@+id/imageViewCover"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewIsbn"
            android:layout_alignTop="@+id/textView0"
            android:layout_alignLeft="@+id/textViewAuthor"
            android:layout_alignStart="@+id/textViewAuthor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView0"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewAuthor"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_genre"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewGenre"
            android:layout_below="@+id/textViewAuthor"
            android:layout_alignLeft="@+id/textViewAuthor"
            android:layout_alignStart="@+id/textViewAuthor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_date"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewDate"
            android:layout_alignTop="@+id/textView6"
            android:layout_alignLeft="@+id/textViewGenre"
            android:layout_alignStart="@+id/textViewGenre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_publisher"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewPublisher"
            android:layout_below="@+id/textViewDate"
            android:layout_alignLeft="@+id/textViewDate"
            android:layout_alignStart="@+id/textViewDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_language"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewLanguage"
            android:layout_below="@+id/textViewPublisher"
            android:layout_alignLeft="@+id/textViewPublisher"
            android:layout_alignStart="@+id/textViewPublisher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_collection"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewCollection"
            android:layout_below="@+id/textViewLanguage"
            android:layout_alignLeft="@+id/textViewLanguage"
            android:layout_alignStart="@+id/textViewLanguage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewDescription"
            android:layout_below="@+id/textViewCollection"
            android:layout_alignLeft="@+id/textViewCollection"
            android:layout_alignStart="@+id/textViewCollection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_comment"
            android:id="@+id/textView16"
            android:layout_below="@+id/textViewDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewComment"
            android:layout_below="@+id/textViewDescription"
            android:layout_alignLeft="@+id/textViewDescription"
            android:layout_alignStart="@+id/textViewDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_read"
            android:id="@+id/textView18"
            android:layout_below="@+id/textViewComment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewRead"
            android:contentDescription="@string/book_read"
            android:layout_below="@+id/textViewComment"
            android:layout_alignLeft="@+id/textViewComment"
            android:layout_alignStart="@+id/textViewComment"
            android:src="@mipmap/icon_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_rating"
            android:id="@+id/textView20"
            android:layout_below="@+id/textView18"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewRating"
            android:contentDescription="@string/book_read"
            android:layout_below="@+id/imageViewRead"
            android:layout_alignLeft="@+id/imageViewRead"
            android:layout_alignStart="@+id/imageViewRead"
            android:src="@mipmap/icon_rating_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewRating"
            android:layout_below="@+id/imageViewRead"
            android:layout_toRightOf="@+id/imageViewRead"
            android:layout_toEndOf="@+id/imageViewRead"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

    </RelativeLayout>

</ScrollView>
